# monaiLabelExploration

./: .env  .env_sample  .gitignore  README.md  image_transformations.py  pyproject.toml  request_workflow.py  test_requests.py
apps/radiology/lib/configs/: mednist.py
apps/radiology/lib/infers/: __init__.py  mednist.py
apps/radiology/lib/trainers/: __init__.py  mednist.py
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: DisplayImgArea.js  GetImgIdArea.js  GetInfoArea.js  Header.js  MainContent.js
tutorials/: README.md  mednist_classifier.ipynb
tutorials/MedNISTClassifier/configs/: common.yaml  evaluate.yaml  inference.json  metadata.json  train.yaml
tutorials/TestBundle/configs/: metadata.json  multifile1.yaml  multifile2.yaml  test_cmdline.yaml  test_config.yaml  test_object.yaml
tutorials/TestBundle/docs/: README.md
